style.css
html,
body {
  margin: 0;
  padding: 0;
  font-size: 12px;
  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

body {
  width: 100vw;
  height: 100vh;
  overflow: hidden;
  background: radial-gradient(#efefef, #cccccc);
}

label {
  color:#efefef;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  font-size: 0.8rem;
}

#animateDiv {
  margin-bottom: 2em;
}

#svg-holder {
  position: fixed;
  width: 100%;
  height: 100%;
  background:repeating-linear-gradient(#efe, hsl(60, 30%, 10%));
  text-align: center;
  z-index: 1;
}

#info {
  position: fixed;
  top:16rem;
  right: 4rem;
  border: 2px lightseagreen solid;
  color: rgb(5, 42, 40);
  width: -moz-fit-content;
  width: fit-content;
  min-width: 20rem;
  height: 20rem;
  padding: 0.875rem 0.4375rem;
  overflow-y: scroll;
  overflow-x: hidden;
  z-index: 2;
}

#music-info {
  display: grid;
  position: fixed;
  top:2rem;
  right: 4rem;
  border: 2px double black;
  background-color: rgb(219, 251, 129);
  color: rgb(11, 15, 11);
  /* width: -moz-fit-content;
  width: fit-content; */
  width:24rem;
  padding: 0.875rem 0.4375rem;
  overflow-y: scroll;
  overflow-x: hidden;
  z-index: 2;
  grid-template-columns:  1fr 1fr;
  grid-template-rows: min-content min-content;
}

#music-info > div {
  border: 1px dotted white;
}

@keyframes glowing {
  0% {
    background-color: #fff;
    box-shadow: 0 0 0 #2ba805;
  }
  90% {
    background-color: #49e819;
    box-shadow: 10px 10px 10px #49e819;
  }
  100% {
    background-color: #fff;
    box-shadow: 0 0 0 #fff;
  }
}

@keyframes error-glow {
  0% {
    background-color: #fff;
    box-shadow: 0 0 0 #ff1515;
  }
  90% {
    background-color: #ffb0b0;
    box-shadow: 10px 10px 10px #ff1515;
  }
  100% {
    background-color: #ffb0c9;
    box-shadow: 4px 4px 4px #ff8615;
  }
}

.run-animation {
  animation: glowing 250ms 1;
}

.run-error {
  animation: error-glow 250ms 1;
}

* {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  -webkit-tap-highlight-color: transparent;
  -webkit-touch-callout: none;
}

